Fixed header banner text wrapping issue

--- a/site/styles/_nav.scss
+++ b/site/styles/_nav.scss
@@ -856,12 +856,12 @@ s72-dropdown,
   position: relative;
   z-index: 10;
   background-color: $primary;
-  height: 26px;
+  min-height: 26px;
 
   .header-banner-message {
     font-size: 12px;
     margin-bottom: 0;
-    @include media-breakpoint-up(xs) {
+    @include media-breakpoint-up(sm) {
       font-size: 14px;
     }
   }
